# CIE-EvaluatorAgent

./: .gitignore  README.md  app.py  chat_flow.py  main.py  pyproject.toml  requirements.txt  ui_strings.yaml  validate_opportunity.py  validate_opportunity_memory.py
.crewai/memory/memories.lance/_deletions/: 11-18-9153218959500632179.arrow
.crewai/memory/memories.lance/_transactions/: 0-6e0a64ed-212f-44b5-98fe-1a7cae30e5c7.txn  1-eb57e407-53b3-439c-89a1-957a6009fdc7.txn  (+29 more)
config/: settings.yaml
output/: session_output.json  session_output_20260611_200710.json
prompts/: SKILL.md  idea_agent.yaml  market_scout_agent.yaml  opportunity_agent.yaml  problem_agent.yaml  ui_strings.yaml
skills/: SKILL.md
skills/dfv_agent/: SKILL.md
skills/ethics_agent/: SKILL.md
skills/idea_agent/: SKILL.md
skills/idea_evaluator/: SKILL.md
skills/idea_structuring_agent/: SKILL.md
skills/market_scout_agent/: SKILL.md
skills/need-validation/: SKILL.md
skills/opportunity_agent/: SKILL.md
skills/opportunity_evaluator/: SKILL.md
skills/problem-structuring/: SKILL.md
skills/psea-evaluation/: SKILL.md
skills/question-quality/: SKILL.md
skills/tips_agent/: SKILL.md
skills/tipsc-evaluation/: SKILL.md
src/: Docker compose.yaml  kafka_entrypoint.py  main.py  models.py  test_crewai_llm.py
src/config/: agents.yaml  kafka.yaml  tasks.yaml
src/kafka/: consumer.py  producer.py  session_runner.py  topics.py
src/skills/ethics/: SKILL.md
src/skills/preeval/: SKILL.md
src/skills/tipsc/: SKILL.md
static/: app.js  style.css
templates/: index.html
(+13 files in other folders)
