[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluator-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.14.6",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tavily-python>=0.7.26",
]

[tool.setuptools.packages.find]
where = ["src"]
